Part 1 to 4 done

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
               </template>
             </ul>
           </section>
-          <script src="./pages/index.js" defer></script>
-          <script src="./scripts/validate.js" defer></script>
+          <script type="module" src="./pages/index.js"></script>
+          <!-- Need to remove this script -->
+          <!-- <script src="./scripts/validate.js" defer></script> -->
         </main>
       </div>
     </div>
